Fix menu items jumping on hover

--- a/wp-content/themes/markomilo/src/scss/components/_menu.scss
+++ b/wp-content/themes/markomilo/src/scss/components/_menu.scss
@@ -36,6 +36,8 @@
         &__link {
             display: block;
             padding: 1rem;
+            padding-left: 3rem;
+            margin-left: -2rem;
         }
     }
 
